# Parallax-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  codecov.yml
cmake/: FindFFmpeg.cmake  configure.cmake  configure_cmake.cmake  find_packages.cmake  include_externals.cmake  includes.cmake  options.cmake  variables.cmake
config/: Parallax.hpp.in
doc/: doxyfile.in  doxyfile_pretty.in
examples/: CMakeLists.txt  settings.psf
examples/00-helloworld/: 00-helloworld.cpp
include/: CMakeLists.txt  Parallax.hpp
include/Core/: Module.hpp
include/Core/Parsers/: Parser.hpp
include/Core/Parsers/CSV/: CSVParser.hpp  CSVRow.hpp  CSVRow.inc
include/PIL/: File.hpp  FileSystem.hpp  Time.hpp  Types.hpp
include/PIL/Collections/: Collections.hpp  Collections.inc  LinkedList.hpp  LinkedList.inc  Stack.hpp  Stack.inc  Vector.hpp  Vector.inc
include/PIL/Threads/: Task.hpp  Task.inc  ThreadManager.hpp  ThreadPool.hpp  ThreadPool.inc  Worker.hpp
include/PIL/fs/: AbstractFileSystem.hpp  File.hpp  FileHandler.hpp  Path.hpp  URL.hpp  fs.hpp
include/PIL/fs/POSIX/: LocalFileHandler.hpp  LocalFileSystem.hpp
include/Parallax/: Debug.hpp  Defines.hpp  ICallback.hpp  ID.hpp  Macros.hpp  Module.hpp  Parallax.hpp  Platform.hpp  Settings.hpp  Strings.hpp  Time.hpp  Types.hpp  Window.hpp
include/Parallax/Collections/: LinkedList.hpp  LinkedList.inc  Stack.hpp  Vector.hpp  Vector.inc
include/Parallax/Debug/: Debug.hpp
include/Parallax/FS/: File.hpp  FileHandler.hpp  IFileSystem.hpp  Path.hpp  URL.hpp  fs.hpp
include/Parallax/FS/POSIX/: LocalFileHandler.hpp  LocalFileSystem.hpp
include/Parallax/FS/Windows/: LocalFileHandler.hpp  LocalFileSystem.hpp
include/Parallax/Maths/: Hash.hpp
include/Parallax/Parsers/CSV/: CSVParser.hpp  CSVRow.hpp
include/Parallax/Parsers/PSF/: PSFParser.hpp
include/Parallax/Physics/: Physics.hpp  PhysicsBullet.hpp
include/Parallax/Renderers/: Config.hpp  Defines.hpp  IRenderer.hpp  Renderer.hpp  RendererGL.hpp  RendererVulkan.hpp
include/Parallax/Renderers/GLContexts/: glx.hpp  wgl.hpp
include/Parallax/Renderers/Objects/: Buffer.hpp  Program.hpp  Texture.hpp  VertexArray.hpp
include/Parallax/Renderers/Objects/GL/: GLBuffer.hpp  GLProgram.hpp  GLTexture.hpp  GLVertexArray.hpp
include/Parallax/Threads/: ITask.hpp  Pipe.hpp  Task.hpp  ThreadManager.hpp  ThreadPool.hpp  Worker.hpp
include/Parallax/Video/: Demultiplexer.hpp  Video.hpp
include/Parallax/Video/Decoders/: VideoDecoder.hpp
include/Parallax/fs/: AbstractFileSystem.hpp  File.hpp  FileHandler.hpp  IFileSystem.hpp  Path.hpp  URL.hpp  fs.hpp
include/Parallax/fs/POSIX/: LocalFileHandler.hpp  LocalFileSystem.hpp
src/: CMakeLists.txt  Debug.cpp  Parallax.cpp  Strings.cpp
src/Core/: CMakeLists.txt  ID.cpp  Settings.cpp
src/Core/Maths/: Hash.cpp
src/Core/Parsers/CSV/: CSVParser.cpp  CSVRow.cpp
src/Core/Parsers/PSF/: PSFParser.cpp
src/Core/Video/: Demultiplexer.cpp  Video.cpp
src/Core/Video/Decoders/: VideoDecoder.cpp
src/PIL/: CMakeLists.txt  Debug.cpp  File.cpp  Platform.cpp
src/PIL/FS/: File.cpp  IFileSystem.cpp  Path.cpp  URL.cpp  fs.cpp
src/PIL/FS/POSIX/: LocalFileHandler.cpp  LocalFileSystem.cpp
src/PIL/FS/Windows/: LocalFileHandler.cpp  LocalFileHandler.hpp  LocalFileSystem.cpp
src/PIL/FileSystem/: File.cpp  FileSystem.hpp
src/PIL/Physics/: Physics.cpp  PhysicsBullet.cpp
src/PIL/Renderers/: IRenderer.cpp  Renderer.cpp  RendererGL.cpp  RendererVulkan.cpp
src/PIL/Renderers/GLContexts/: glx.cpp  wgl.cpp
src/PIL/Renderers/Objects/: Buffer.cpp  Program.cpp  Texture.cpp  VertexArray.cpp
src/PIL/Renderers/Objects/GL/: GLBuffer.cpp  GLProgram.cpp  GLTexture.cpp  GLVertexArray.cpp
src/PIL/Threads/: ITask.cpp  Pipe.cpp  Task.cpp  ThreadManager.cpp  ThreadPool.cpp  Worker.cpp
src/PIL/Window/: Windows.cpp  X11.cpp
src/PIL/fs/: File.cpp  IFileSystem.cpp  Path.cpp  URL.cpp  fs.cpp
src/PIL/fs/POSIX/: LocalFileHandler.cpp  LocalFileSystem.cpp
tests/: CMakeLists.txt  test_Parallax.cpp  tests.cpp  tests.hpp
tests/Core/: CMakeLists.txt
tests/Core/Parsers/: CMakeLists.txt  test_parsers_csv.cpp
tests/PIL/: CMakeLists.txt  test_debug.cpp  test_sized_types.cpp  test_thread_manager_callback.cpp  test_thread_manager_default.cpp  test_thread_manager_errors.cpp  test_thread_manager_pause.cpp  test_thread_manager_stop.cpp  test_thread_manager_worker.cpp  test_types_sizes.cpp
tests/PIL/Collections/: CMakeLists.txt  perfs_collection_linked_list.cpp  perfs_collection_stack.cpp  perfs_collection_vector.cpp  test_collection_linked_list.cpp  test_collection_linked_list_iterator.cpp  test_collection_stack.cpp  test_collection_vector.cpp  test_collection_vector_iterator.cpp
tests/PIL/Renderers/: CMakeLists.txt  test_renderer_gl.cpp
tests/PIL/Threads/: CMakeLists.txt  test_thread_manager_callback.cpp  test_thread_manager_default.cpp  test_thread_manager_errors.cpp  test_thread_manager_pause.cpp  test_thread_manager_stop.cpp  test_thread_manager_worker.cpp
tests/PIL/fs/: CMakeLists.txt  test_fs_file.cpp  test_fs_path.cpp  test_fs_read_write.cpp  test_fs_url.cpp
