cmake_minimum_required (VERSION 3.8)
project (ParallaxEngine)

include (cmake/find_packages.cmake)
include (cmake/options.cmake)
include (cmake/variables.cmake)
include (cmake/include_externals.cmake)
include (cmake/configure.cmake)
include (cmake/configure_cmake.cmake)
include (cmake/includes.cmake)

add_subdirectory(src)
if (BUILD_TESTS)
    add_subdirectory(tests)
endif (BUILD_TESTS)
if (BUILD_EXAMPLES)
    add_subdirectory(examples)
endif (BUILD_EXAMPLES)
